# AbodePhysicshop

./: .gitignore  README.md  chat_demo.py  demo.py  genesis_simulator.py  genesis_simulator_from_json.py  main.py  physics_obj.py  pyproject.toml  temp_ui_copy.txt
assistant/: __init__.py  llm_assistant.py
backend/: app.py  assistant.py  chat_service.py
frontend/: app.py  controllers.py  frontend.py  ui.py
simulator/: auxiliary.py  config.py  geometry.py  material.py  options.py  scene.py  visual.py
