[project]
name = "abodephysicshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi>=0.118.0",
    "genesis>=0.4.1",
    "huggingface>=0.0.1",
    "outlines>=1.2.5",
    "pydantic>=2.11.9",
    "pyside6>=6.10.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
]
