[project]
name = "abodephysicshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi>=0.118.0",
    "genesis-world>=0.2.1",
    "huggingface>=0.0.1",
    "outlines>=1.2.5",
    "pydantic==2.7.1",
    "pyside6>=6.10.0",
    "pysplashsurf==0.12.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
]
